    permission errors and corrupting config.xml.
  * Mantis 0000853: 'omv-mkgraph' runs every 5 mins. By default it is set to
    15min and can be modified via OMV_COLLECTD_RRDTOOL_MKGRAPH_INTERVAL.
  * Mantis 0000850: Entering multiple NTP servers results in wrong ntp.conf.
    Only one timeserver can be set because of some internal restrictions.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 22 Sep 2013 08:35:09 +0200

openmediavault (0.5.10) stable; urgency=low

  * Update locales.
  * Mantis 0000818: Monit alert: filesystem doesn't exist when checking
    a filesystem. Use only mount points and not device paths.
  * Mantis 0000842: NFS duplicate export entries.
  * Mantis 0000846: TLD ".invalid" not working.
  * Mantis 0000849: Configuration change improvement.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 13 Sep 2013 18:07:33 +0200

openmediavault (0.5.9) stable; urgency=low

  * Various improvements and bugfixes.
  * Mantis 0000817: Powermanagement - Power down button does not work.
  * Mantis 0000818: Monit alert: filesystem doesn't exist when checking
    a filesystem.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Sep 2013 18:02:39 +0200

openmediavault (0.5.8) stable; urgency=low

  * Update locales.
  * Various WebGUI API improvements.
  * Add option to enable/disable software update notifications.
  * Mantis 0000830: Shared folders "Privileges" dialog.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 05 Sep 2013 23:27:33 +0200

openmediavault (0.5.7) stable; urgency=low

  * Various improvements and bugfixes.
  * Fix bug in user/group import RPC.
  * Fix bug in filesystem quota dialog.
  * Fix SSL cert issue when activating TLS for the FTP service.
  * Mantis 0000815: When log on a non-administrator account,there is some
    "undefined" text.
  * Mantis 0000817: Powermanagement - Power down button does not work.
  * Mantis 0000819: Column-Width not saved in Diagnostic -> System logs.
