@@ -6,6 +6,7 @@ openmediavault (0.5.11) stable; urgency=low
     15min and can be modified via OMV_COLLECTD_RRDTOOL_MKGRAPH_INTERVAL.
   * Mantis 0000850: Entering multiple NTP servers results in wrong ntp.conf.
     Only one timeserver can be set because of some internal restrictions.
+  * Mantis 0000856: Security: Directory Traversal rrd.php.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 22 Sep 2013 08:35:09 +0200
 
